--- a/src/App.scss
+++ b/src/App.scss
@@ -43,3 +43,120 @@
     }
   }
 }
+
+.profile-cont {
+  display: flex;
+  // justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.sidebar-cont {
+  width: 250px;
+  margin: 2.5rem 3rem;
+  height: calc(100% - 5rem);
+  background-image: linear-gradient(0deg, #4b06b9, #2b52e0);
+  border-radius: 2rem;
+  display: flex;
+  // align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  .sidebar-item {
+    padding: 0 2.5rem;
+    color: #ccc;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    cursor: pointer;
+    &:hover {
+      color: #eee;
+    }
+    &.active {
+      color: #fff;
+      font-weight: 600;
+    }
+    .item-title {
+      padding: 1.2rem 0;
+      border-bottom: 1px solid #b7b7b7;
+      flex: 1;
+    }
+    .active-icon {
+      border-radius: 100px 0 0 100px;
+      // background-color: #f9f9f9;
+      // color: #666;
+      position: absolute;
+      right: 0;
+      padding: 0.5rem 0.7rem;
+      font-size: 1.2rem;
+    }
+  }
+}
+.main-cont {
+  margin: 2.5rem 3rem;
+  margin-left: 0;
+  height: calc(100% - 5rem);
+  flex: 1;
+}
+
+.page-header-cont {
+  padding: 1rem 0;
+  border-bottom: 1px solid #ddd;
+  display: flex;
+  justify-content: space-between;
+}
+
+.profile-det-cont {
+  width: 400px;
+  // margin: 2rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  color: #555;
+
+  .profile-image {
+    height: 13rem;
+    width: 13rem;
+    border-radius: 50%;
+    margin: 2rem;
+    background-position: center;
+    background-size: cover;
+  }
+}
+
+.profile-map-cont {
+  // width: 400px;
+  flex: 1;
+  margin: 2rem 0;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+  // align-items: center;
+  font-size: 1.2rem;
+  color: #555;
+  border-left: 1px solid #ddd;
+}
+
+.det-item {
+  padding: 0.5rem 0;
+  margin: 0 1rem;
+  display: flex;
+  width: calc(100% - 2rem);
+  justify-content: center;
+  box-sizing: border-box;
+  .label {
+    color: #999;
+    width: 35%;
+    text-align: right;
+  }
+  .value {
+    padding-left: 0.5rem;
+    width: 65%;
+    font-weight: 600;
+  }
+}
+
+.border-top {
+  border-top: 1px solid #ddd;
+}
