--- a/src/App.scss
+++ b/src/App.scss
@@ -32,15 +32,20 @@
       text-decoration: none;
       color: #444;
       border-bottom: 1px solid #ddd;
-      .item-img {
-        border-radius: 50%;
-        height: 2rem;
-        width: 2rem;
-        margin-right: 1rem;
-        background-position: center;
-        background-size: cover;
-      }
     }
+  }
+}
+
+.item-img {
+  border-radius: 50%;
+  height: 2rem;
+  width: 2rem;
+  margin-right: 1rem;
+  img {
+    object-fit: cover;
+    border-radius: 50%;
+    height: 100%;
+    width: 100%;
   }
 }
 
@@ -68,6 +73,7 @@
     align-items: center;
     position: relative;
     cursor: pointer;
+    text-decoration: none;
     &:hover {
       color: #eee;
     }
@@ -77,17 +83,22 @@
     }
     .item-title {
       padding: 1.2rem 0;
-      border-bottom: 1px solid #b7b7b7;
+      border-bottom: 1px solid #fff5;
       flex: 1;
     }
     .active-icon {
       border-radius: 100px 0 0 100px;
-      // background-color: #f9f9f9;
-      // color: #666;
+      background-color: #f9f9f9;
+      color: #666;
       position: absolute;
       right: 0;
       padding: 0.5rem 0.7rem;
       font-size: 1.2rem;
+    }
+    &:last-of-type {
+      .item-title {
+        border: none;
+      }
     }
   }
 }
@@ -118,10 +129,13 @@
   .profile-image {
     height: 13rem;
     width: 13rem;
-    border-radius: 50%;
     margin: 2rem;
-    background-position: center;
-    background-size: cover;
+    img {
+      object-fit: cover;
+      border-radius: 50%;
+      height: 100%;
+      width: 100%;
+    }
   }
 }
 
